hack/determined-ai/worker-plane/determined_ai_master_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: determined-ai-master-service
spec:
  type: ExternalName
  externalName: host.docker.internal
